# netlify-serverless-examples

./: .gitignore  Makefile  README.md  build.sh  netlify.toml
crates/calculator/: Cargo.toml
crates/calculator/src/: main.rs
crates/hello-world/: Cargo.toml
crates/hello-world/src/: main.rs
crates/json-response/: Cargo.toml
crates/json-response/src/: main.rs
crates/querystring/: Cargo.toml
crates/querystring/src/: main.rs
crates/redirect/: Cargo.toml
crates/redirect/src/: main.rs
crates/reqwest-dad-joke/: Cargo.toml
crates/reqwest-dad-joke/src/: main.rs
public/: index.html
