[package]
name = "hello-world"
version = "0.1.0"
authors = ["Christopher Biscardi <chris@christopherbiscardi.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.138", features = ["derive"] }
tokio = { version = "1.19.2", features = ["full"] }
serde_json = "1.0.82"
lambda_runtime = "0.5.1"
aws_lambda_events = "0.6.3"
http = "0.2.8"
