[package]
name = "querystring"
version = "0.1.0"
authors = ["Christopher Biscardi <chris@christopherbiscardi.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
tokio = { version = "^0.2", features = ["full"] }
serde_json = "1.0.60"
netlify_lambda_http = "0.1.1"
