[package]
name = "redirect"
version = "0.1.0"
authors = ["Christopher Biscardi <chris@christopherbiscardi.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.11.0", features = ["macros"] }
serde_json = "1.0.67"
eyre = "0.6.5"
http = "0.2.4"
lambda_runtime = "0.4.1"
